--- a/src/views/viewers/viewer.css
+++ b/src/views/viewers/viewer.css
@@ -103,3 +103,7 @@
         font-size: 12px;
         color: rgba(127,255,255,0.75);
     }
+
+    .adsk-viewing-viewer .adsk-toolbar {
+        bottom: 25px !important;
+    }
